target/java/PeopleCodeParser.java
package com.leandrobaca.peoplesoft.peoplecode.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PeopleCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_COMMENT_SLASH=1, API_COMMENT=2, WS=3, BLOCK_COMMENT_NEST=4, BLOCK_COMMENT_PLUS=5, 
		LINE_COMMENT=6, DIR_IF=7, DIR_ELSE=8, DIR_END_IF=9, ABSTRACT=10, ADD=11, 
		ALIAS=12, AND=13, ARRAY=14, AS=15, AT=16, BREAK=17, CATCH=18, CLASS=19, 
		COLON=20, COMMA=21, COMPONENT=22, CONSTANT=23, CONTINUE=24, CREATE=25, 
		DECLARE=26, DOC=27, DIV=28, DOT=29, ELSE=30, END_CLASS=31, END_EVALUATE=32, 
		END_FOR=33, END_GET=34, END_IF=35, END_INTERFACE=36, END_METHOD=37, END_SET=38, 
		END_TRY=39, END_WHILE=40, EQ=41, ERROR=42, EVALUATE=43, EXCEPTION=44, 
		EXIT=45, EXP=46, EXTENDS=47, FOR=48, FUNCTION=49, END_FUNCTION=50, GE=51, 
		GET=52, GLOBAL=53, GT=54, IF=55, IMPLEMENTS=56, IMPORT=57, INSTANCE=58, 
		INTERFACE=59, INTEGER=60, LBRACKET=61, LE=62, LIBRARY=63, LOCAL=64, LPAREN=65, 
		LT=66, METHOD=67, NEQ=68, NOT=69, NULL=70, OF=71, OR=72, OUT=73, PEOPLECODE=74, 
		PRIVATE=75, PROPERTY=76, PROTECTED=77, RBRACKET=78, READONLY=79, REF=80, 
		REPEAT=81, RETURN=82, RETURNS=83, RPAREN=84, SEMI=85, SET=86, STAR=87, 
		STEP=88, SUBTR=89, SUPER=90, THEN=91, THROW=92, TO=93, TRY=94, UNTIL=95, 
		VALUE=96, WARNING=97, WHEN=98, WHEN_OTHER=99, WHILE=100, ANY=101, BOOLEAN=102, 
		DATE=103, DATETIME=104, FLOAT=105, NUMBER=106, STRING=107, TIME=108, PIPE=109, 
		METADATA=110, DecimalLiteral=111, IntegerLiteral=112, StringLiteral=113, 
		BooleanLiteral=114, RecordEvent=115, SYSTEM_VARIABLE=116, SYSTEM_CONSTANT=117, 
		GENERIC_ID_LIMITED=118, GENERIC_ID=119, USER_VARIABLE=120, DIR_WS=121, 
		DIR_THEN=122, DIR_ATOM=123;
	public static final int
		RULE_appClass = 0, RULE_program = 1, RULE_importDeclaration = 2, RULE_appPackageAll = 3, 
		RULE_appPackagePath = 4, RULE_appClassPath = 5, RULE_classDeclaration = 6, 
		RULE_interfaceDeclaration = 7, RULE_superclass = 8, RULE_classHeader = 9, 
		RULE_nonPrivateHeader = 10, RULE_publicHeader = 11, RULE_protectedHeader = 12, 
		RULE_privateHeader = 13, RULE_nonPrivateMember = 14, RULE_privateMember = 15, 
		RULE_methodHeader = 16, RULE_methodArguments = 17, RULE_methodArgument = 18, 
		RULE_simpleType = 19, RULE_builtInType = 20, RULE_typeT = 21, RULE_propertyDeclaration = 22, 
		RULE_instanceDeclaration = 23, RULE_constantDeclaration = 24, RULE_literal = 25, 
		RULE_classExternalDeclaration = 26, RULE_programPreambles = 27, RULE_programPreamble = 28, 
		RULE_functionDeclaration = 29, RULE_functionDeclarationPCode = 30, RULE_recordField = 31, 
		RULE_functionDeclarationDLL = 32, RULE_dllArguments = 33, RULE_dllArgument = 34, 
		RULE_dllReturnType = 35, RULE_nonLocalVarDeclaration = 36, RULE_classBody = 37, 
		RULE_classMember = 38, RULE_method = 39, RULE_getter = 40, RULE_setter = 41, 
		RULE_statements = 42, RULE_statementBlock = 43, RULE_statement = 44, RULE_localVariableDeclaration = 45, 
		RULE_localVariableDefinition = 46, RULE_localVariableDeclAssignment = 47, 
		RULE_ifStatement = 48, RULE_forStatement = 49, RULE_whileStatement = 50, 
		RULE_repeatStatement = 51, RULE_evaluateStatement = 52, RULE_whenClauses = 53, 
		RULE_whenClause = 54, RULE_whenOther = 55, RULE_comparisonOperator = 56, 
		RULE_tryCatchBlock = 57, RULE_catchClauses = 58, RULE_catchClause = 59, 
		RULE_expression = 60, RULE_simpleFunctionCall = 61, RULE_dotAccess = 62, 
		RULE_allowableFunctionName = 63, RULE_genericID = 64, RULE_ident = 65, 
		RULE_expressionList = 66, RULE_objectCreate = 67, RULE_functionCallArguments = 68, 
		RULE_functionDefinitions = 69, RULE_functionDefinition = 70, RULE_functionArguments = 71, 
		RULE_functionArgument = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"appClass", "program", "importDeclaration", "appPackageAll", "appPackagePath", 
			"appClassPath", "classDeclaration", "interfaceDeclaration", "superclass", 
			"classHeader", "nonPrivateHeader", "publicHeader", "protectedHeader", 
			"privateHeader", "nonPrivateMember", "privateMember", "methodHeader", 
			"methodArguments", "methodArgument", "simpleType", "builtInType", "typeT", 
			"propertyDeclaration", "instanceDeclaration", "constantDeclaration", 
			"literal", "classExternalDeclaration", "programPreambles", "programPreamble", 
			"functionDeclaration", "functionDeclarationPCode", "recordField", "functionDeclarationDLL", 
			"dllArguments", "dllArgument", "dllReturnType", "nonLocalVarDeclaration", 
			"classBody", "classMember", "method", "getter", "setter", "statements", 
			"statementBlock", "statement", "localVariableDeclaration", "localVariableDefinition", 
			"localVariableDeclAssignment", "ifStatement", "forStatement", "whileStatement", 
			"repeatStatement", "evaluateStatement", "whenClauses", "whenClause", 
			"whenOther", "comparisonOperator", "tryCatchBlock", "catchClauses", "catchClause", 
			"expression", "simpleFunctionCall", "dotAccess", "allowableFunctionName", 
			"genericID", "ident", "expressionList", "objectCreate", "functionCallArguments", 
			"functionDefinitions", "functionDefinition", "functionArguments", "functionArgument"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "'+'", 
			null, null, null, null, "'@'", null, null, null, "':'", "','", null, 
			null, null, null, null, null, "'/'", "'.'", null, null, null, null, null, 
			null, null, null, null, null, null, "'='", null, null, null, null, "'**'", 
			null, null, null, null, "'>='", null, null, "'>'", null, null, null, 
			null, null, null, "'['", "'<='", null, null, "'('", "'<'", null, null, 
			null, null, null, null, null, null, null, null, null, "']'", null, null, 
			null, null, null, "')'", "';'", null, "'*'", null, "'-'", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCK_COMMENT_SLASH", "API_COMMENT", "WS", "BLOCK_COMMENT_NEST", 
			"BLOCK_COMMENT_PLUS", "LINE_COMMENT", "DIR_IF", "DIR_ELSE", "DIR_END_IF", 
			"ABSTRACT", "ADD", "ALIAS", "AND", "ARRAY", "AS", "AT", "BREAK", "CATCH", 
			"CLASS", "COLON", "COMMA", "COMPONENT", "CONSTANT", "CONTINUE", "CREATE", 
			"DECLARE", "DOC", "DIV", "DOT", "ELSE", "END_CLASS", "END_EVALUATE", 
			"END_FOR", "END_GET", "END_IF", "END_INTERFACE", "END_METHOD", "END_SET", 
			"END_TRY", "END_WHILE", "EQ", "ERROR", "EVALUATE", "EXCEPTION", "EXIT", 
			"EXP", "EXTENDS", "FOR", "FUNCTION", "END_FUNCTION", "GE", "GET", "GLOBAL", 
			"GT", "IF", "IMPLEMENTS", "IMPORT", "INSTANCE", "INTERFACE", "INTEGER", 
			"LBRACKET", "LE", "LIBRARY", "LOCAL", "LPAREN", "LT", "METHOD", "NEQ", 
			"NOT", "NULL", "OF", "OR", "OUT", "PEOPLECODE", "PRIVATE", "PROPERTY", 
			"PROTECTED", "RBRACKET", "READONLY", "REF", "REPEAT", "RETURN", "RETURNS", 
			"RPAREN", "SEMI", "SET", "STAR", "STEP", "SUBTR", "SUPER", "THEN", "THROW", 
			"TO", "TRY", "UNTIL", "VALUE", "WARNING", "WHEN", "WHEN_OTHER", "WHILE", 
			"ANY", "BOOLEAN", "DATE", "DATETIME", "FLOAT", "NUMBER", "STRING", "TIME", 
			"PIPE", "METADATA", "DecimalLiteral", "IntegerLiteral", "StringLiteral", 
			"BooleanLiteral", "RecordEvent", "SYSTEM_VARIABLE", "SYSTEM_CONSTANT", 
			"GENERIC_ID_LIMITED", "GENERIC_ID", "USER_VARIABLE", "DIR_WS", "DIR_THEN", 
			"DIR_ATOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PeopleCodeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PeopleCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppClassContext extends ParserRuleContext {
		public AppClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appClass; }
	 
		public AppClassContext() { }
		public void copyFrom(AppClassContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppClassProgramContext extends AppClassContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PeopleCodeParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<ClassExternalDeclarationContext> classExternalDeclaration() {
			return getRuleContexts(ClassExternalDeclarationContext.class);
		}
		public ClassExternalDeclarationContext classExternalDeclaration(int i) {
			return getRuleContext(ClassExternalDeclarationContext.class,i);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public List<TerminalNode> SEMI() { return getTokens(PeopleCodeParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PeopleCodeParser.SEMI, i);
		}
		public AppClassProgramContext(AppClassContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PeopleCodeParserListener ) ((PeopleCodeParserListener)listener).enterAppClassProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PeopleCodeParserListener ) ((PeopleCodeParserListener)listener).exitAppClassProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PeopleCodeParserVisitor ) return ((PeopleCodeParserVisitor<? extends T>)visitor).visitAppClassProgram(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceProgramContext extends AppClassContext {
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PeopleCodeParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(PeopleCodeParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PeopleCodeParser.SEMI, i);
		}
		public InterfaceProgramContext(AppClassContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PeopleCodeParserListener ) ((PeopleCodeParserListener)listener).enterInterfaceProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PeopleCodeParserListener ) ((PeopleCodeParserListener)listener).exitInterfaceProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PeopleCodeParserVisitor ) return ((PeopleCodeParserVisitor<? extends T>)visitor).visitInterfaceProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppClassContext appClass() throws RecognitionException {
		AppClassContext _localctx = new AppClassContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_appClass);
		int _la;
		try {
			int _alt;
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new AppClassProgramContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IMPORT) {
					{
					{
					setState(146);
					importDeclaration();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(152);
				classDeclaration();
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(154); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(153);
							match(SEMI);
							}
							}
							setState(156); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==SEMI );
						setState(158);
						classExternalDeclaration();
						}
						} 
					}
					setState(163);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(171);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEMI) {
						{
						{
						setState(164);
						match(SEMI);
						}
						}
						setState(169);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(170);
					classBody();
					}
					break;
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(173);
					match(SEMI);
					}
					}
					setState(178);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(179);
				match(EOF);
				}
				break;
			case 2:
				_localctx = new InterfaceProgramContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IMPORT) {
					{
					{
					setState(181);
					importDeclaration();
					}
					}
					setState(186);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(187);
				interfaceDeclaration();
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(188);
					match(SEMI);
					}
					}
					setState(193);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(194);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PeopleCodeParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public ProgramPreamblesContext programPreambles() {
			return getRuleContext(ProgramPreamblesContext.class,0);
		}
		public List<TerminalNode> SEMI() { return getTokens(PeopleCodeParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PeopleCodeParser.SEMI, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PeopleCodeParserListener ) ((PeopleCodeParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PeopleCodeParserListener ) ((PeopleCodeParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PeopleCodeParserVisitor ) return ((PeopleCodeParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(198);
					importDeclaration();
					}
					} 
				}
				setState(203);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(205);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(204);
				programPreambles();
				}
				break;
			}
			setState(210);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(207);
					match(SEMI);
					}
					} 
				}
				setState(212);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2202748401145036800L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 144079949333437163L) != 0)) {
				{
				setState(213);
				statements();
				}
			}

			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(216);
				match(SEMI);
				}
				}
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(222);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
